fix(contact-chips): Remove left/right margin from input to align properly
Fixes T2878

--- a/static/components/tokenizing-text-field.less
+++ b/static/components/tokenizing-text-field.less
@@ -154,8 +154,8 @@
       // The padding-left and padding-right must be 0 so we can manually
       // set the width properly to always match the size of the input
       // test.
-      padding: 0.4em 0 0.4em 7.5px;
-      margin: 2px 5px 3px 0;
+      padding: 0.4em 0 0.4em 0;
+      margin: 2px 0 3px 0;
 
       &.noop-input {
         position: absolute;
